--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div class="container">
 
         <div class="sidebar">
-
-
+            <label for="start_num">Initial Number</label>
+            <input type="number" name="start-num" id="num-input">
+            <button type="submit"></button>
         </div>
 
         <div class="content">
